fix gappers command + add gappers to dashboard

--- a/django_react_proj/main_part/templates/main_part/home.html
+++ b/django_react_proj/main_part/templates/main_part/home.html
@@ -1,5 +1,279 @@
 {% extends "base.html" %}
+{% load static %}
+{% block content %}
+<div class="page-content">
+    <div class="container-fluid">
 
-{% block title %}
-  asdasdasdsadasd
-{% endblock %}
+        <!-- start page title -->
+        <div class="page-title-box">
+            <div class="row align-items-center">
+                <div class="col-md-8">
+                    <h6 class="page-title">Dashboard</h6>
+                    <ol class="breadcrumb m-0">
+                        <li class="breadcrumb-item active">Welcome to Veltrix Dashboard</li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+        <!-- end page title -->
+
+        <div class="row">
+            <div class="col-xl-3 col-md-6">
+                <div class="card mini-stat bg-primary text-white">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <div class="float-start mini-stat-img me-4">
+                                <img src="{% static 'assets/images/services-icon/01.png' %}" alt="">
+                            </div>
+                            <h5 class="font-size-16 text-uppercase text-white-50">Orders</h5>
+                            <h4 class="fw-medium font-size-24">1,685 <i
+                                    class="mdi mdi-arrow-up text-success ms-2"></i></h4>
+                            <div class="mini-stat-label bg-success">
+                                <p class="mb-0">+ 12%</p>
+                            </div>
+                        </div>
+                        <div class="pt-2">
+                            <div class="float-end">
+                                <a href="#" class="text-white-50"><i class="mdi mdi-arrow-right h5 text-white-50"></i></a>
+                            </div>
+
+                            <p class="text-white-50 mb-0 mt-1">Since last month</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card mini-stat bg-primary text-white">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <div class="float-start mini-stat-img me-4">
+                                <img src="{% static 'assets/images/services-icon/02.png' %}" alt="">
+                            </div>
+                            <h5 class="font-size-16 text-uppercase text-white-50">Revenue</h5>
+                            <h4 class="fw-medium font-size-24">52,368 <i
+                                    class="mdi mdi-arrow-down text-danger ms-2"></i></h4>
+                            <div class="mini-stat-label bg-danger">
+                                <p class="mb-0">- 28%</p>
+                            </div>
+                        </div>
+                        <div class="pt-2">
+                            <div class="float-end">
+                                <a href="#" class="text-white-50"><i class="mdi mdi-arrow-right h5 text-white-50"></i></a>
+                            </div>
+
+                            <p class="text-white-50 mb-0 mt-1">Since last month</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card mini-stat bg-primary text-white">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <div class="float-start mini-stat-img me-4">
+                                <img src="{% static 'assets/images/services-icon/03.png' %}" alt="">
+                            </div>
+                            <h5 class="font-size-16 text-uppercase text-white-50">Average Price</h5>
+                            <h4 class="fw-medium font-size-24">15.8 <i
+                                    class="mdi mdi-arrow-up text-success ms-2"></i></h4>
+                            <div class="mini-stat-label bg-info">
+                                <p class="mb-0"> 00%</p>
+                            </div>
+                        </div>
+                        <div class="pt-2">
+                            <div class="float-end">
+                                <a href="#" class="text-white-50"><i class="mdi mdi-arrow-right h5 text-white-50"></i></a>
+                            </div>
+
+                            <p class="text-white-50 mb-0 mt-1">Since last month</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-xl-3 col-md-6">
+                <div class="card mini-stat bg-primary text-white">
+                    <div class="card-body">
+                        <div class="mb-4">
+                            <div class="float-start mini-stat-img me-4">
+                                <img src="{% static 'assets/images/services-icon/04.png' %}" alt="">
+                            </div>
+                            <h5 class="font-size-16 text-uppercase text-white-50">Product Sold</h5>
+                            <h4 class="fw-medium font-size-24">2436 <i
+                                    class="mdi mdi-arrow-up text-success ms-2"></i></h4>
+                            <div class="mini-stat-label bg-warning">
+                                <p class="mb-0">+ 84%</p>
+                            </div>
+                        </div>
+                        <div class="pt-2">
+                            <div class="float-end">
+                                <a href="#" class="text-white-50"><i class="mdi mdi-arrow-right h5 text-white-50"></i></a>
+                            </div>
+
+                            <p class="text-white-50 mb-0 mt-1">Since last month</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end row -->
+
+        <div class="row">
+            <div class="col-xl-9">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title mb-4">Monthly Earning</h4>
+                        <div class="row">
+                            <div class="col-lg-7">
+                                <div>
+                                    <div id="chart-with-area" class="ct-chart earning ct-golden-section">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-lg-5">
+                                <div class="row">
+                                    <div class="col-md-6">
+                                        <div class="text-center">
+                                            <p class="text-muted mb-4">This month</p>
+                                            <h3>$34,252</h3>
+                                            <p class="text-muted mb-5">It will be as simple as in fact it
+                                                will be occidental.</p>
+                                            <span class="peity-donut"
+                                                data-peity='{ "fill": ["#02a499", "#f2f2f2"], "innerRadius": 28, "radius": 32 }'
+                                                data-width="72" data-height="72">4/5</span>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-6">
+                                        <div class="text-center">
+                                            <p class="text-muted mb-4">Last month</p>
+                                            <h3>$36,253</h3>
+                                            <p class="text-muted mb-5">It will be as simple as in fact it
+                                                will be occidental.</p>
+                                            <span class="peity-donut"
+                                                data-peity='{ "fill": ["#02a499", "#f2f2f2"], "innerRadius": 28, "radius": 32 }'
+                                                data-width="72" data-height="72">3/5</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- end row -->
+                    </div>
+                </div>
+                <!-- end card -->
+            </div>
+
+            <div class="col-xl-3">
+                <div class="card">
+                    <div class="card-body">
+                        <div>
+                            <h4 class="card-title mb-4">Sales Analytics</h4>
+                        </div>
+                        <div class="wid-peity mb-4">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div>
+                                        <p class="text-muted">Online</p>
+                                        <h5 class="mb-4">1,542</h5>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="mb-4">
+                                        <span class="peity-line" data-width="100%"
+                                            data-peity='{ "fill": ["rgba(2, 164, 153,0.3)"],"stroke": ["rgba(2, 164, 153,0.8)"]}'
+                                            data-height="60">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="wid-peity mb-4">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div>
+                                        <p class="text-muted">Offline</p>
+                                        <h5 class="mb-4">6,451</h5>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="mb-4">
+                                        <span class="peity-line" data-width="100%"
+                                            data-peity='{ "fill": ["rgba(2, 164, 153,0.3)"],"stroke": ["rgba(2, 164, 153,0.8)"]}'
+                                            data-height="60">6,2,8,4,-3,8,1,-3,6,-5,9,2,-8,1,4,8,9,8,2,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="">
+                            <div class="row">
+                                <div class="col-md-6">
+                                    <div>
+                                        <p class="text-muted">Marketing</p>
+                                        <h5>84,574</h5>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="mb-4">
+                                        <span class="peity-line" data-width="100%"
+                                            data-peity='{ "fill": ["rgba(2, 164, 153,0.3)"],"stroke": ["rgba(2, 164, 153,0.8)"]}'
+                                            data-height="60">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- end row -->
+        <div class="row">
+            <div class="col-xl-12">
+                <div class="card">
+                    <div class="card-body">
+                        <h4 class="card-title mb-4">Gappers</h4>
+                        <div class="table-responsive">
+                            <table class="table table-hover table-centered table-nowrap mb-0">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">(#) ticker</th>
+                                        <th scope="col">open</th>
+                                        <th scope="col">close</th>
+                                        <th scope="col">hight</th>
+                                        <th scope="col">low</th>
+                                        <th scope="col">vwap</th>
+                                        <th scope="col">volume</th>
+                                        <th scope="col">gap</th>
+                                          <th scope="col">date</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+
+                                  {% for gapper in gappers%}
+                                    <tr>
+                                        <th scope="row">{{ gapper.ticker_name }}</th>
+                                        <td>
+                                            {{ gapper.open }}
+                                        </td>
+                                        <td>{{ gapper.close }}</td>
+                                        <td>{{ gapper.hight }}</td>
+                                        <td>{{ gapper.low }}</td>
+                                        <td>{{ gapper.vwap }}</td>
+                                        <td>{{ gapper.volume }}</td>
+                                        <td>{{ gapper.gap }}</td>
+                                        <td>{{ gapper.date }}</td>
+                                    </tr>
+                                  {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- end row -->
+
+
+
+    </div> <!-- container-fluid -->
+</div>
+{% endblock%}
